# mink

./: .gitignore  AGENTS.md  CLAUDE.md  pyproject.toml
docs/: conf.py
docs/superpowers/plans/: 2026-05-06-g1-pose-dataset.md  2026-05-06-humanoid-torso-sliders.md  2026-05-07-timestamped-output-dir.md
docs/superpowers/specs/: 2026-05-06-g1-pose-dataset-design.md  2026-05-06-humanoid-torso-sliders-design.md  2026-05-07-timestamped-output-dir-design.md
examples/: humanoid_g1_feet.py  humanoid_g1_torso.py
examples/unitree_g1/: scene_g1_torso.xml
g1_pose_dataset/: README.md  __init__.py  __main__.py  concat.py  config.py  grid.py  play.py  worker.py
tests/: test_humanoid_g1_feet_example.py
tests/test_g1_pose_dataset/: test_concat.py  test_config.py  test_dispatch.py  test_grid.py  test_output_dir.py  test_resume.py  test_worker.py
